# ferrotype

./: .gitignore  Cargo.toml  README.md
.github/workflows/: mirror.yml
assets/lessons/: 02_dk.txt  03_sl.txt  07_top_row.txt  09_all_keys.txt  11_numbers.txt  13_common_words.txt
assets/lessons/colemak/: 01_index_keys.txt  02_middle_keys.txt  03_ring_pinky.txt  04_home_row.txt  05_home_reach.txt  06_top_intro.txt  07_top_row.txt  08_bottom_row.txt
assets/lessons/dvorak/: 01_index_keys.txt  02_middle_keys.txt  03_ring_pinky.txt  04_home_row.txt  05_home_reach.txt  06_top_intro.txt  07_top_row.txt  08_bottom_row.txt
assets/lessons/qwerty/: 01_index_keys.txt  04_home_row.txt  05_home_reach.txt  06_top_intro.txt  08_bottom_row.txt
assets/lessons/shared/: 10_capitals.txt  12_punctuation.txt  14_paragraphs.txt  15_code.txt
src/: app.rs  history.rs  input.rs  keyboard.rs  lessons.rs  main.rs  settings.rs  ui.rs
