[package]
name = "ferrotype"
version = "0.2.0"
edition = "2021"

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["local-offset", "formatting"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "signal"] }

[profile.release]
lto = true
