[package]
name = "clavirio"
version = "0.2.2"
edition = "2021"

authors = ["Alexander Alexandrov"]
description = "A terminal typing tutor with virtual keyboard, built-in lessons, and session tracking"
license = "MIT"
repository = "https://github.com/alexylon/clavirio"
documentation = "https://docs.rs/clavirio"
keywords = ["typing", "tutor", "keyboard", "tui", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.29"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3.47", features = ["local-offset", "formatting"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "signal"] }

[profile.release]
lto = true
